<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.myles.udacity.basketcounter.MainActivity">

    <!--Team A-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/upper_court_background"
            android:scaleType="centerCrop"
            android:src="@drawable/court_upper" />

        <!--reset button-->
        <Button
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:background="@color/black"
            android:onClick="reset"
            android:text="@string/reset_button_text"
            android:textAllCaps="true"
            android:textColor="@color/white" />
        <!--team Name-->
        <TextView
            android:id="@+id/team_name_upper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:background="@color/blue"
            android:paddingBottom="8dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="8dp"
            android:text="@string/team_name_upper"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <!--scores-->
        <TextView
            android:id="@+id/score_upper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_name_upper"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:text="@string/score_init_value"
            android:textSize="80sp"
            android:textStyle="italic" />

        <!-- detailed scores board-->
        <LinearLayout
            android:id="@+id/scores_layout_upper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_upper"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <!-- fouls-->
            <TextView
                android:id="@+id/foul_time_upper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_init_value"
                android:textAlignment="center" />
            <!-- 1pts-->
            <TextView
                android:id="@+id/score_1pt_upper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_init_value"
                android:textAlignment="center" />
            <!-- 2pts-->
            <TextView
                android:id="@+id/score_2pt_upper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_init_value"
                android:textAlignment="center" />
            <!-- 3pts-->
            <TextView
                android:id="@+id/score_3pt_upper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_init_value"
                android:textAlignment="center" />
        </LinearLayout>

        <!--Score button board-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scores_layout_upper"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <!--foul button-->
            <Button
                android:id="@+id/button_foul_upper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/navy"
                android:onClick="foulActionUpper"
                android:text="@string/foul_button_text" />
            <!-- 1pts-->
            <Button
                android:id="@+id/button_1pt_upper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/navy"
                android:onClick="scoreOneUpper"
                android:text="@string/button_1pt_text" />
            <!-- 2pts-->
            <Button
                android:id="@+id/button_2pt_upper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/navy"
                android:onClick="scoreTwoUpper"
                android:text="@string/button_2pt_text" />
            <!-- 3pts-->
            <Button
                android:id="@+id/button_3pt_upper"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/navy"
                android:onClick="scoreThreeUpper"
                android:text="@string/button_3pt_text" />

        </LinearLayout>

    </RelativeLayout>

    <!-- Team B -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/court_lower" />

        <!--team Name-->
        <TextView
            android:id="@+id/team_name_lower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:background="@color/red"
            android:paddingBottom="8dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="8dp"
            android:text="@string/team_name_lower"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <!--scores-->
        <TextView
            android:id="@+id/score_lower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/team_name_lower"
            android:layout_centerHorizontal="true"
            android:layout_margin="8dp"
            android:text="@string/score_init_value"
            android:textSize="80sp"
            android:textStyle="italic" />

        <!-- detailed scores board-->
        <LinearLayout
            android:id="@+id/scores_layout_lower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/score_lower"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <!-- fouls-->
            <TextView
                android:id="@+id/foul_time_lower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_init_value"
                android:textAlignment="center" />
            <!-- 1pts-->
            <TextView
                android:id="@+id/score_1pt_lower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_init_value"
                android:textAlignment="center" />
            <!-- 2pts-->
            <TextView
                android:id="@+id/score_2pt_lower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_init_value"
                android:textAlignment="center" />
            <!-- 3pts-->
            <TextView
                android:id="@+id/score_3pt_lower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/score_init_value"
                android:textAlignment="center" />
        </LinearLayout>

        <!--Score button board-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/scores_layout_lower"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">
            <!--foul button-->
            <Button
                android:id="@+id/button_foul_lower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="foulActionLower"
                android:text="@string/foul_button_text" />
            <!-- 1pts-->
            <Button
                android:id="@+id/button_1pt_lower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="scoreOneLower"
                android:text="@string/button_1pt_text" />
            <!-- 2pts-->
            <Button
                android:id="@+id/button_2pt_lower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="scoreTwoLower"
                android:text="@string/button_2pt_text" />
            <!-- 3pts-->
            <Button
                android:id="@+id/button_3pt_lower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:background="@color/orange"
                android:onClick="scoreThreeLower"
                android:text="@string/button_3pt_text" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
